--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-8">
+    <div class="col-md-9">
       <div class="card">
         <%= image_tag 'architecture.jpg', size: '550x300', class: 'card-img-top' %>
         <div class="card-img-overlay d-flex">
@@ -27,7 +27,7 @@
         解答は新規登録後に確認できます。<br>
         新規会員登録は<%= link_to "こちら", new_user_registration_path %>
       </p>
-      <h2 class="mt-4 mb-4 text-center">管工事施工管理技士とは</h2>
+      <h2 class="mt-4 mb-4 text-center"><i class="fa-solid fa-helmet-safety"></i>&nbsp;管工事施工管理技士とは&nbsp;<i class="fa-solid fa-helmet-safety"></i></h2>
       <h3>管工事施工管理技士の概要</h3>
       <ul>
         <li>一定規模の営業所や建設現場で求められる国家資格</li>
@@ -35,14 +35,14 @@
         <li>正答率が60％で合格となりますが、働きながらの受験はなかなか難しい場合があります</li>
       </ul>
       <p>
-        1・2級管工事施工管理技士の技術検定制度は、建設業法第27条に基づく国家試験です。
+        &emsp;1・2級管工事施工管理技士の技術検定制度は、建設業法第27条に基づく国家試験です。
         1級管工事施工管理技士の資格を取得すると、特定建設業の「営業所ごとに置く専任の技術者」および現場に配置する「監理技術者」として認められます。<br>
-        さらに、2級管工事施工管理技士の資格であれば、一般建設業の許可を受ける際に必要な「営業所ごとに配置する専任の技術者」および「建設工事における主任技術者」として認められます。
+        &emsp;さらに、2級管工事施工管理技士の資格であれば、一般建設業の許可を受ける際に必要な「営業所ごとに配置する専任の技術者」および「建設工事における主任技術者」として認められます。
         これらの資格は、施工管理に携わる者にとって必要不可欠です。<br>
-        このように、施工管理技士は資格取得のメリットが大きく、極めて重要な資格です。
+        &emsp;このように、施工管理技士は資格取得のメリットが大きく、極めて重要な資格です。
         工事現場における技術責任者として高い評価を受けています。
         また、令和3年度より1級技士補が新たに創設され、その価値は一層高まるでしょう。<br>
-        さらに、2級の第一次検定は17歳以上であれば誰でも受験できます。
+        &emsp;さらに、2級の第一次検定は17歳以上であれば誰でも受験できます。
         難関試験とはいえませんが、実務経験者が受験する中で一次・二次ともに合格するのは10人中2〜3人程度であり、容易な試験ではありません。
       </p>
       <h4>管工事施工管理技術検定 1級と2級の違い</h4>
