--- a/app/views/public/users/withdraw_check.html.erb
+++ b/app/views/public/users/withdraw_check.html.erb
@@ -1,6 +1,6 @@
-<div class="container address">
-  <div class="row">
-    <div class="col">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-auto my-4">
       <h4 class="my-5">本当に退会しますか？</h4>
       <table>
         <tr><td>退会すると、会員登録情報や</td></tr>
