--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
 <footer>
-  <div class = "container-fluid p-4 mt-2 bg-dark">
-    <div class = "row">
-      <div class = "mx-auto">
-      </div>
+  <div class="container-fluid p-4 mt-2 bg-dark">
+    <div class="row">
+      <div class="mx-auto"></div>
     </div>
   </div>
 </footer>
