--- a/app/views/public/bookmarks/_btn.html.erb
+++ b/app/views/public/bookmarks/_btn.html.erb
@@ -1,10 +1,10 @@
 <% if quiz.bookmarked_by?(current_user) %>
-  <%= link_to quiz_bookmark_path(quiz, current_user.bookmarks.find_by(quiz_id: quiz).id ), method: :delete, remote: true do %>
+  <%= link_to quiz_bookmark_path(quiz, current_user.bookmarks.find_by(quiz_id: quiz).id ), method: :delete, remote: true, class: "btn btn-info btn-sm" do %>
     <i class="fa-solid fa-bookmark"></i>
     ブックマーク
   <% end %>
 <% else %>
-  <%= link_to quiz_bookmarks_path(quiz), method: :post, remote: true do %>
+  <%= link_to quiz_bookmarks_path(quiz), method: :post, remote: true, class: "btn btn-info btn-sm" do %>
     <i class="fa-regular fa-bookmark"></i>
     ブックマーク
   <% end %>
