--- a/app/views/public/bookmarks/answer.html.erb
+++ b/app/views/public/bookmarks/answer.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row justify-content-center">
+    <div class="col-md-10">
       <%= render "public/quizzes/answer_template", result: @result, quiz: @quiz, quiz_comment: @quiz_comment %>
-      <%= link_to "ブックマーク一覧に戻る", quiz_bookmarks_path(current_user) %>
+      <div class="text-right mt-2">
+        <%= link_to quiz_bookmarks_path(current_user), class: "btn btn-info" do %>
+          <i class="fa-solid fa-bookmark"></i>&nbsp;ブックマーク一覧に戻る
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
