--- a/app/views/public/bookmarks/index.html.erb
+++ b/app/views/public/bookmarks/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row justify-content-center">
+    <div class="col-md-10 mb-4">
       <h4 class="my-4">ブックマークした問題一覧</h4>
       <table class="table table-hover">
         <thead>
