--- a/app/views/public/quiz_comments/_form.html.erb
+++ b/app/views/public/quiz_comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_with model: [quiz, quiz_comment], local: false do |f| %>
   <%= f.text_area :comment, rows:'2', placeholder: "コメントをここに", class: "w-100", id: "comment_textarea" %>
-  <%= f.submit "送信" %>
+  <%= f.submit "送信", class: 'btn btn-success' %>
 <% end %>
