--- a/app/views/public/quizzes/_quiz_template.html.erb
+++ b/app/views/public/quizzes/_quiz_template.html.erb
@@ -7,6 +7,7 @@
 <%= radio_button_tag 'answer', '4' %>  <%= quiz.answer4 %><br><br>
 <%= f.submit '回答', class: 'btn btn-success' %>
 
+<!--answerページから検索一覧に戻れるようにデータを渡している-->
 <%= f.hidden_field :model, value: @model %>
 <%= f.hidden_field :title, value: @quiz_title %>
 <%= f.hidden_field :method, value: @method %>
