--- a/app/views/public/quizzes/answer.html.erb
+++ b/app/views/public/quizzes/answer.html.erb
@@ -1,6 +1,6 @@
-<div class="container" style="padding-bottom: 60px;">
-  <div class="row">
-    <div class="col">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-10">
       <%= render "public/quizzes/answer_template", result: @result, quiz: @quiz, quiz_comment: @quiz_comment %>
       <%= link_to "次の問題", quiz_quiz_path, class: "btn btn-primary mt-4 mb-2" %>
       <%= link_to "マイページに戻る", user_path(current_user), class: "btn btn-secondary mt-4 mb-2" %>
