--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container address">
-  <div class="row">
-    <div class="col">
-      <h4 class="my-5">新規会員登録</h4>
+  <div class="row justify-content-center">
+    <div class="col-md-8  my-5">
+      <h4 class="my-4">新規会員登録</h4>
       <%= form_with model: @user, url: user_registration_path do |f| %>
         <%= render "public/shared/error_messages", resource: resource %>
         <table class="table table-borderless">
@@ -26,8 +26,12 @@
           </tr>
         </table>
       <% end %>
-      <h4 class="my-5">既に登録済みの方</h4>
-      <h5><%= link_to "こちら", new_user_session_path %>　からログインしてください。</h5>
+      <h4 class="my-4">既に登録済みの方</h4>
+      <table>
+        <tr>
+          <td><%= link_to "こちら", new_user_session_path %>　からログインしてください。</td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
