--- a/app/views/public/searches/answer.html.erb
+++ b/app/views/public/searches/answer.html.erb
@@ -1,8 +1,12 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row justify-content-center">
+    <div class="col-md-10">
       <%= render "public/quizzes/answer_template", result: @result, quiz: @quiz, quiz_comment: @quiz_comment %>
-      <%= link_to "検索結果に戻る", search_path(title: @quiz_title, model: @model, method: @method) %>
+      <div class="text-right mt-2">
+        <%= link_to search_path(title: @quiz_title, model: @model, method: @method), class: "btn btn-outline-success" do %>
+          <i class="fas fa-search"></i>&nbsp;検索結果に戻る
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
