--- a/app/views/public/searches/quiz.html.erb
+++ b/app/views/public/searches/quiz.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row justify-content-center">
+    <div class="col-md-9 mt-4 mb-4">
       <%= form_with url:answer_search_path(@search_quiz), method: :post do |f| %>
         <%= render 'public/quizzes/quiz_template', quiz: @search_quiz, f: f, title: @quiz_title, model: @model, method: @method %>
       <% end %>
