--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row justify-content-center">
+    <div class="col-md-10">
       <h4 class="my-5">会員情報編集</h4>
       <%= form_with model: @user, url: user_path, method: :patch do |f| %>
       <table class="table table-borderless">
@@ -8,18 +8,15 @@
           <td>会員ID</td>
           <td><%= @user.id %></td>
         </tr>
-
         <tr>
           <td>ユーザー名</td>
           <td><%= f.text_field :name, autofocus: true, autocomplete: "username" %></td>
         </tr>
-
         <tr>
           <td>メールアドレス</td>
           <td><%= f.text_field :email, autofocus: true, autocomplete: "email" %></td>
           <td></td>
         </tr>
-
         <tr>
           <td></td>
           <td><%= f.submit "変更を保存", class:"btn btn-success" %></td>
